# Parrot

./: .cproject  .gitignore  .project  Board.cpp  Board.h  CMakeLists.txt  Figures.cpp  File.cpp  Game.cpp  GameObject.cpp  Header.h  Parrot.kdev4  Parrot.sln  README.md  Save.txt  ToDoList.txt  main.cpp  save.txt
.kdev4/: Parrot.kdev4
Parrot/: Parrot.vcxproj  Parrot.vcxproj.filters
Parrot/Debug/: vc141.idb
Parrot/Debug/Parrot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Parrot.lastbuildstate
test/: BoardTest.cpp  Klucz.txt  tests.cpp
